--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ roboflow==1.1.28
 ultralytics==8.2.14
 scikit-image==0.23.2
 PyYAML==6.0.1
-opencv-python==4.9.0.80
+opencv-python==4.8.0.74
 opencv-python-headless==4.8.0.74
 shapely==2.0.4
+albumentations==1.3.1
