--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-typer==0.12.3
 pillow==10.3.0
 roboflow==1.1.28
 ultralytics==8.2.14
@@ -8,3 +7,5 @@ opencv-python==4.8.0.74
 opencv-python-headless==4.8.0.74
 shapely==2.0.4
 albumentations==1.3.1
+python-dotenv==1.0.1
+python-dotenv==1.0.1
