--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ opencv-python-headless==4.8.0.74
 shapely==2.0.4
 albumentations==1.3.1
 python-dotenv==1.0.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+modal==0.62.181
