--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pflows"
-version = "0.1.19"
-description = "Several tools for dealing with image annotations to train YOLO or similar models"
+version = "0.1.20"
+description = "Several tools by dealing with image annotations to train YOLO or similar models"
 readme = "README.md"
 authors = [
   {name = "Daniel Pérez Rada", email = "dperezrada@gmail.com"}
